Fix overflow of li text in filter

--- a/Plone/src/docpool.theme/docpool/theme/webpack_resources/src/docpooltheme/docpool_rei.less
+++ b/Plone/src/docpool.theme/docpool/theme/webpack_resources/src/docpooltheme/docpool_rei.less
@@ -1,3 +1,10 @@
+#faceted-form .faceted-widget fieldset {
+  white-space: normal;
+}
+
+#faceted-form .faceted-widget label {
+  display: flex;
+}
 
 #faceted_table {
   .td_cell_Metadata {
